Wed Jul 27 21:31:14 2005        Pat Rankin      <rankin@pactechdata.com>

	* vmstest.com: Format test group feedback differently (append "...")
	  to distinguish it from individual test feedback.
	(manyfiles): Determine the number of files to use dynamically
	  instead of using hardcoded 300 in case user's open file quota
	  is generous enough to support more than that.
	(longsub): Add error trap so that failure when gawk is built with
	  VAXCRTL doesn't cause testing to terminate.
	(vms_io1): Invoke with normal Unix-style command line syntax.
	(vms_cmd): New test; split off DCL-style command line from vms_io1.

Tue Jul 26 21:46:16 2005  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.5: Release tar file made.

Mon May 23 20:54:31 2005        Pat Rankin      <rankin@pactechdata.com>

	* vms_gawk.c [gawk_cmd, #if __ia64__]: Switch from globalvalue
	  to strict_refdef and then take gawk_cmd's address during use.

	* vmstest.com (concat1, longsub, arrayprm2, arrayprm3, arryref2,
	  arryref3, arryref4, arryref5, aryprm1, aryprm2, aryprm3,
	  aryprm4, aryprm5, aryprm6, aryprm7, aryprm8, concat2, concat3,
	  delarpm2, delfunc, exitval2, fmttest, fnarray2, fnmisc, fordel,
	  getline3, gsubasgn, gsubtest, gsubtst2, gsubtst4, gsubtst5,
	  hex, inputred, iobug1, manglprm, nested, nfneg, noloop1,
	  noloop2, nulrsend, prec, prtoeval, rstest1, rstest2, rstest3,
	  rstest4, rstest5, scalar, sortempty, splitarr, strcat1,
	  subsepnm, synerr1, uninit2, uninit3, uninit4, uninitialized,
	  unterm, wjposer1, zeroe0): New tests.

Wed May 18 21:22:09 2005        Pat Rankin      <rankin@pactechdata.com>

	* vms_gawk.c [#if __ia64__]: Use #pragma extern_model globalvalue
	  for the declaration of gawk_cmd.

Mon May 9 21:17:33 2005         Pat Rankin      <rankin@pactechdata.com>

	* vms-conf.h [#if DECC]: Use #pragma to suppress "new feature in C99"
	  diagnostic for structure field designator style initialization in
	  regexec.c.
